GPIO verification was added to the tests

--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,8 @@ var app = angular.module("myApp", []);
 <label>Sensor B: </label>{{state.sensor_b}}<br/>
 <label>Sensor A: </label>{{state.sensor_a}}<br/>
 <label>Time: </label>{{state.time}}<br/>
+<label>Heater: </label>{{state.heater}}<br/>
 <label>Details: </label>{{state.details}}<br/>
-<label>Rotation: </label>{{state.rotation}}
 </div>
 <button type="button" class="btn" data-toggle="collapse" data-target="#demo">Settings</button>
 <div id="demo" class="collapse">
